# MicSense

./: .gitignore  CMakeLists.txt  README.md  build.sh
CMake/: FindFFTW3.cmake  FindPortAudio.cmake  FindSNDFILE.cmake
src/: CMakeLists.txt  bgm_player.cpp  bgm_player.h  micsense.cpp  voice_fusion.cpp
